--- a/faq.html
+++ b/faq.html
@@ -190,137 +190,143 @@
                   </form>
                 </div>
               </div>
-              <div class="divider"></div>
+              <div class="divider push-ends-20"></div>
             </div>
             <div class="row">
               <div class="col-md-4 col-sm-4">
                 <h4 class="text-center">Most popular questions</h4>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
+                <div class="media-mobile-wrap">
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                </div>
               </div>
               <div class="col-md-4 col-sm-4">
                 <h4 class="text-center">Content</h4>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
+                <div class="media-mobile-wrap">
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                </div>
               </div>
               <div class="col-md-4 col-sm-4">
                 <h4 class="text-center">3D Pprinting</h4>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
-                <a href="#" class="media">
-                  <div class="media-left">
-                    <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                  </div>
-                  <div class="media-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                  </div>
-                </a>
+                <div class="media-mobile-wrap">
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                  <a href="#" class="media">
+                    <div class="media-left">
+                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                    </div>
+                    <div class="media-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                    </div>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -330,7 +336,7 @@
       <div class="footer soft-ends-20 hidden-xs">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
               <a href="#"><h4 class="text-center">Latest updates</h4></a>
               <p>Natalia</p>
               <span>How do you say Envato in Chinese? Here's how we worked it out. enva.to/4TfPo pic.twitter.com/jzIY9XyS04 </span>
@@ -343,7 +349,7 @@
               <br>
               <span>11.24 PM</span>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
               <h4 class="text-center">Quick Links</h4>
               <ul class="quick-links">
                 <li><a class="btn" href="#" role="button">-Home</a></li>
@@ -355,7 +361,7 @@
                 <li><a class="btn" href="#" role="button">-Gallery</a></li>
               </ul>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
               <a href="#"><h4 class="text-center">Popular topics</h4></a>
               <p>What is the Meta Post</p>
               <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
