--- a/login.html
+++ b/login.html
@@ -212,7 +212,7 @@
       <div class="footer soft-ends-20 hidden-xs">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
               <a href="#"><h4 class="text-center">Latest updates</h4></a>
               <p>Natalia</p>
               <span>How do you say Envato in Chinese? Here's how we worked it out. enva.to/4TfPo pic.twitter.com/jzIY9XyS04 </span>
@@ -225,7 +225,7 @@
               <br>
               <span>11.24 PM</span>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
               <h4 class="text-center">Quick Links</h4>
               <ul class="quick-links">
                 <li><a class="btn" href="#" role="button">-Home</a></li>
@@ -237,7 +237,7 @@
                 <li><a class="btn" href="#" role="button">-Gallery</a></li>
               </ul>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
               <a href="#"><h4 class="text-center">Popular topics</h4></a>
               <p>What is the Meta Post</p>
               <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
