--- a/registration.html
+++ b/registration.html
@@ -140,7 +140,7 @@
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
-                <a href="#" class="text-center">
+                <a href="forums.html" class="text-center">
                   <div class="content-menu-item-wrap forum-item">
                     Forums
                     <br>
